--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/favicon.png">
-    <title>MPPTX在线文档</title>
+    <title>教学助手</title>
     <style>
         .start-loading-container {
             position: fixed;
@@ -64,7 +64,7 @@
         <div class="start-loading-box">
             <div class="loading-point"></div>
             <img src="/favicon-192x192.png" alt="">
-            欢迎使用mpptx在线文档
+            欢迎使用教学助手
         </div>
     </div>
     <script type="module" src="./src/main.ts"></script>
